--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -205,6 +205,10 @@ jobs:
                     /d:sonar.scm.disabled=true \
                     /d:sonar.qualitygate.wait=true \
                     /d:sonar.verbose=true \
+                    /d:sonar.coverage.jacoco.xmlReportPaths="$COVERAGE_PATH" \
+                    /d:sonar.coverage.minimum.percentage=0 \
+                    /d:sonar.coverage.line.minimum.percentage=0 \
+                    /d:sonar.coverage.branch.minimum.percentage=0 \
                     $SONAR_PARAMS
 
             - name: Restore dependencies (for SonarQube analysis)
