--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,3 +1,13 @@
+name: CD Pipeline
+
+on:
+    workflow_run:
+        workflows: ["CI Pipeline"]
+        types:
+            - completed
+
+jobs:
+
 deploy-azure:
     name: Deploy to Azure Web App
     runs-on: ubuntu-latest
