--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,36 +7,38 @@ on:
             - completed
 
 jobs:
+    deploy-azure:
+        name: Deploy to Azure Web App
+        runs-on: ubuntu-latest
+        if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
+        environment: staging
+        steps:
+            - name: Log in to Docker Hub
+              run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-deploy-azure:
-    name: Deploy to Azure Web App
-    runs-on: ubuntu-latest
-    needs: [docker-build, dast]
-    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
-    environment: staging
-    steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+            - name: Pull Docker image
+              run: |
+                  docker pull ${{ secrets.DOCKER_USERNAME }}/hrs-api:uat-latest
 
-        - name: Azure Login
-          uses: azure/login@v1
-          with:
-              creds: ${{ secrets.AZURE_CREDENTIALS }}
+            - name: Azure Login
+              uses: azure/login@v1
+              with:
+                  creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-        - name: Setup .NET
-          uses: actions/setup-dotnet@v4
-          with:
-              global-json-file: global.json
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v4
+              with:
+                  global-json-file: global.json
 
-        - name: Run EF Core migrations
-          env:
-              MYSQL_CONN: ${{ secrets.TF_MYSQL_CONNECTION_STRING }}
-          run: |
-              dotnet tool install --global dotnet-ef
-              dotnet ef database update --connection "$MYSQL_CONN" --project HRS.API
+            - name: Run EF Core migrations
+              env:
+                  MYSQL_CONN: ${{ secrets.TF_MYSQL_CONNECTION_STRING }}
+              run: |
+                  dotnet tool install --global dotnet-ef
+                  dotnet ef database update --connection "$MYSQL_CONN" --project HRS.API
 
-        - name: Deploy container
-          uses: azure/webapps-deploy@v2
-          with:
-              app-name: web-hrs-api-uat
-              images: ${{ secrets.DOCKER_USERNAME }}/hrs-api:uat-latest
+            - name: Deploy container
+              uses: azure/webapps-deploy@v2
+              with:
+                  app-name: web-hrs-api-uat
+                  images: ${{ secrets.DOCKER_USERNAME }}/hrs-api:uat-latest
